--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
+# Ignore local files & folders
+*.exe
+*.txt
+**/dev/
+
+### Terraform ###
 # Local .terraform directories
 **/.terraform/*
 
@@ -10,9 +16,10 @@ crash.log
 crash.*.log
 
 # Exclude all .tfvars files, which are likely to contain sensitive data, such as
-# password, private keys, and other secrets. These should not be part of version 
-# control as they are data points which are potentially sensitive and subject 
+# password, private keys, and other secrets. These should not be part of version
+# control as they are data points which are potentially sensitive and subject
 # to change depending on the environment.
+#
 *.tfvars
 *.tfvars.json
 
@@ -28,7 +35,28 @@ override.tf.json
 
 # Include tfplan files to ignore the plan output of command: terraform plan -out=tfplan
 # example: *tfplan*
+*.tfplan
+*.tfplan.backup
 
 # Ignore CLI configuration files
 .terraformrc
 terraform.rc
+
+### VisualStudioCode ###
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+!.vscode/*.code-snippets
+
+# Local History for Visual Studio Code
+.history/
+
+# Built Visual Studio Code Extensions
+*.vsix
+
+### VisualStudioCode Patch ###
+# Ignore all local history of files
+.history
+.ionide
